# smtp-relay

./: README.md  config.example.py  pyproject.toml  relay.py  tasks.py  worker.cmd  worker.sh
lib/: smtpd.py  smtpd_auth.py
