[tool.poetry]
name = "smtp-relay"
version = "0.1.0"
description = ""
authors = ["LaunchPad <launchpad001@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["redis"], version = "^5.3.6"}
eventlet = "^0.36.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
